--- a/Backend/nbproject/project.properties
+++ b/Backend/nbproject/project.properties
@@ -30,7 +30,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.jpa20-persistence.classpath}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
