--- a/Backend/nbproject/project.properties
+++ b/Backend/nbproject/project.properties
@@ -30,13 +30,19 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}
+    ${libs.jpa20-persistence.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.EclipseLink-GlassFish-v3.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.jpa20-persistence.classpath}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
