--- a/Backend/nbproject/project.properties
+++ b/Backend/nbproject/project.properties
@@ -30,11 +30,11 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.jpa20-persistence.classpath}:\
-    ${libs.jpa2-persistence.classpath}:\
+    ${libs.EclipseLink-GlassFish-v3.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.EclipseLink-GlassFish-v3.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.jpa20-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
