--- a/FrontEnd/web/WEB-INF/web.xml
+++ b/FrontEnd/web/WEB-INF/web.xml
@@ -8,6 +8,12 @@
         <servlet-name>Controller</servlet-name>
         <servlet-class>Servlet.Controller</servlet-class>
         <load-on-startup>1</load-on-startup>
+        <multipart-config>
+        <location>/tmp</location>
+        <max-file-size>20848820</max-file-size>
+        <max-request-size>418018841</max-request-size>
+	    <file-size-threshold>1048576</file-size-threshold>
+	</multipart-config>
     </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
@@ -21,4 +27,6 @@
     <welcome-file-list>
         <welcome-file>controller/action=timeline</welcome-file>
     </welcome-file-list>
+    
+
 </web-app>
