--- a/FrontEnd/nbproject/project.properties
+++ b/FrontEnd/nbproject/project.properties
@@ -47,7 +47,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
