--- a/FrontEnd/web/WEB-INF/web.xml
+++ b/FrontEnd/web/WEB-INF/web.xml
@@ -25,7 +25,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>controller/action=timeline</welcome-file>
+        <welcome-file>controller</welcome-file>
     </welcome-file-list>
     
 
